fix: text overlap the Note container when too much text

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
   position: absolute;
   border-radius: 35px;
   box-shadow: var(--shadow);
+  overflow: hidden;
 }
 
 .NoteText {
